# Tang20251215

./: ## 0001.txt  测试.md  经验分享.md
QT/QT与单片机通信开发/: QT开发.md
QT/QT使用/: QT中英文切换.docx  QT中英文切换配置.md  QT打包widow系统.docx  QT打包widow系统.md  Ubuntu关于Qt 版本库不一致的问题.md
QT/QT和Ubuntu/: QT打包widow系统.md  v10.Ubuntu使用Qt5.15.2编译X86和ARM.md  v11.Ubuntu20.04使用Qt5.15.2编译X86和ARM.md
QT与单片机通信开发/: QT实现.md  QT开发.md  QT开发规划.md
RK3568/内核/: 设备树.md
SSH/: 学习.md
共享文件夹/: window和ubuntu共享.md
工作记录/ESOP/: ESOP 开发计划.md  ESOP 软件安装.md  ESOP开发计划.md  ESOP文档开发.md  ESOP软软件安装.md
工作记录/ESOP/A文档/: ESOP 开发计划.docx  ESOP文档开发.docx  ESOP软件安装.doc  ~$OP软件安装.doc
工作记录/RM1332/RM1332二次开发/: 仅自己可见RM1332执行流程.docx
工作记录/RM1332/RM1332二次开发/Linux GPIO.Demo/: USB GPIO 控制说明文档.docx
工作记录/RM1332/RM1332二次开发/Linux GPIO.Demo/Demo_IO_Multi/: arm64-toolchain.cmake
工作记录/RM1332/RM1332二次开发/Linux GPIO.Demo/Demo_IO_Multi/cmake/: CMakeLists.txt
工作记录/RM1332/RM1332资料/: RM1332尺寸图.dxf  岩獴产品选型表.xlsx
工作记录/RM1332/RM1332资料/sdk/: README.en.md  README.md
工作记录/RM1332/RM1332资料/sdk/c#/: PwrOn.cs
工作记录/RM1332/RM1332资料/sdk/java/: IO.java  PWM.java
工作记录/RM1332/RM1332资料/sdk/matlab/: rockmong.h
工作记录/RM1332/RM1332资料/sdk/python/: iap.py  (+3 more)
工作记录/RM1332/RM1332资料/例程/cc++/Demo_PWM/cmake/: CMakeLists.txt
工作记录/RM1332/RM1332资料/常见问题汇总/: Linux下解决USB运行权限问题.txt  linux下make编译缺库或找不到库.txt
工作记录/RM1332二次开发/Linux GPIO.exe/: Demo_IO  USB GPIO 控制说明文档.docx
经验分享.md/: QT打包widow系统.docx  QT打包widow系统.md  V11.Ubuntu使用Qt5.15.2编译X86和ARM.md  allegro使用.md  v10.Ubuntu使用Qt5.15.2编译X86和ARM.md  v11.Ubuntu使用Qt5.15.2编译X86和ARM.md  无法连接服务器解决方法.md  软件.md
经验分享.md/千兆网卡/: 千兆网卡.md
(+231 files in other folders)
